--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@primevue/themes": "^4.1.0",
     "primevue": "^4.1.0",
     "vue": "^3.4.37"
   },
