--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@primevue/themes": "^4.1.0",
+    "primeicons": "^7.0.0",
     "primevue": "^4.1.0",
+    "tailwindcss-primeui": "^0.3.4",
     "vue": "^3.4.37"
   },
   "devDependencies": {
