--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@primevue/themes": "^4.1.0",
+    "dom-to-image": "^2.6.0",
     "primeicons": "^7.0.0",
     "primevue": "^4.1.0",
     "tailwindcss-primeui": "^0.3.4",
